			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Error in handling signals in Prolog.  Now caused immediate
    assertion failure due to strickter checking.

  * FIXED: Bug#283 plld.exe sets __WINDOWS__ rather then WIN32.

  * CLEANUP: Avoid using the argument-stack for cycle detection.  Now
    uses a segmented stack.

  * CLEANUP: Add a new small stack for optimized arithmetic to avoid
    further overloading of the local stack.  Preparing for re-introducing
    the stack-shifter.

  * FIXED: Memory leak from GMP constants in optimized arithmetic 
    expressions.

  * ADDED: PL_INTPTR type to PL_unify_term().

  * FIXED: Avoid error summing time of finished CPU time.

  * FIXED: Reporting finished threads using current_thread/2

  * CLEANUP: Some cleanup to declarations and stack-shifter, preparing
    combining the stack-shifter in the normal version.

  * FIXED: memory leak involving GMP numbers for instantiated `output'
    arguments.  I.e. 0 is 2727 rdiv 22.  Mike Elston.

  * ADDED: Sset_filter() to formalize a filter relation between streams.
    Incomplete.

===============================
VERSION 5.6.34 (April 23, 2007)
===============================

  * ADDED: Cross-referencer handles integer arguments in meta-predicate
    declarations.

  * FIXED: possible scenario where atom garbage collection is no longer
    automatically started, running out of memory.  Mike Elston.

  * ENHANCED: parse_url(-, +) does not include HTTP port if this is 80.

  * FIXED: Bug#27: incorrect failure of PL_get_pointer().  Paul
    Singleton.

===============================
VERSION 5.6.33 (April 06, 2007)
===============================

  * FIXED: Body decompilation with very large terms.  Mike Elston.
